--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main class="container mt-4">
-        <h1 class="text-primary">Welcome to: Root</h1>
+        <h1 class="text-success">Welcome to: Root</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati ex quibusdam possimus quas ut suscipit
             minus blanditiis laudantium voluptate quod debitis, aperiam a animi, minima eos doloremque? Rem, doloremque
             nisi!</p>
